fixed sidebar css to left align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@ aside {
   left: 50;
   padding-left: 20px;
   /* margin: 0 15%; */
-  text-align: right;
+  text-align: left;
   font-weight: bold;
   /* display: block; */
 }
